--- a/index.html
+++ b/index.html
@@ -13,63 +13,64 @@
         <div class="container">
             <h1>Pay as you go</h1>
             <div class="row">
-                <div class="col-lg-7 col-md-3 col-sm-3" >
+                <div class="col-md-7 col-12">
                     <div class="data">
-                    <table style="border: 3px solid #ffffff;">
-                        <thead>
-                            <tr class="style">
+                        <table style="border: 3px solid #ffffff;">
+                            <thead>
+                                <tr class="style">
 
-                                <td class="t-heading1">EMAIL CREDIT</td>
-                                <td class="t-heading2">PRICE PER EMAIL</td>
-                                <td class="t-heading3">PREPAY AMOUNT</td>
+                                    <td class="t-heading1">EMAIL CREDIT</td>
+                                    <td class="t-heading2">PRICE PER EMAIL</td>
+                                    <td class="t-heading3">PREPAY AMOUNT</td>
 
-                            </tr>
+                                </tr>
 
-                        </thead>
+                            </thead>
 
-                        <tbody>
+                            <tbody>
 
-                            <tr class="style">
-                                <td class="e-credit">10.000</td>
-                                <td class="price">0.02</td>
-                                <td class="amount">$200</td>
-                            </tr>
-                            <tr class="style">
-                                <td class="e-credit">20.000</td>
-                                <td class="price">0.01</td>
-                                <td class="amount">$250</td>
-                            </tr>
-                            <tr class="style">
-                                <td class="e-credit">50.000</td>
-                                <td class="price">0.01</td>
-                                <td class="amount">$500</td>
-                            </tr>
-                            <tr class="style">
-                                <td class="e-credit">75.000</td>
-                                <td class="price">0.01</td>
-                                <td class="amount">$250</td>
-                            </tr>
-                            <tr class="style">
-                                <td class="e-credit">200.000</td>
-                                <td class="price">5/thousand</td>
-                                <td class="amount">$500</td>
-                            </tr>
+                                <tr class="style">
+                                    <td class="e-credit">10.000</td>
+                                    <td class="price">0.02</td>
+                                    <td class="amount">$200</td>
+                                </tr>
+                                <tr class="style">
+                                    <td class="e-credit">20.000</td>
+                                    <td class="price">0.01</td>
+                                    <td class="amount">$250</td>
+                                </tr>
+                                <tr class="style">
+                                    <td class="e-credit">50.000</td>
+                                    <td class="price">0.01</td>
+                                    <td class="amount">$500</td>
+                                </tr>
+                                <tr class="style">
+                                    <td class="e-credit">75.000</td>
+                                    <td class="price">0.01</td>
+                                    <td class="amount">$250</td>
+                                </tr>
+                                <tr class="style">
+                                    <td class="e-credit">200.000</td>
+                                    <td class="price">5/thousand</td>
+                                    <td class="amount">$500</td>
+                                </tr>
 
 
-                        </tbody>
-                    </table>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
-                
-                    <div class="card">
+
+                <div class="col-12 col-md-5">
+                    <div class="card ml-md-auto">
                         <h2>Easy Start</h2>
                         <p>To get started, you select the desired sample and base the entire website on it. It’s
                             that simple!</p>
-                        <button><a href="https://www.figma.com/resource-library/design-basics/" target="_blank">
-                                <div class="p1">Learn more</div>
-                            </a></button>
+                        <button>
+                            <div class="p1">Learn more</div>
+                        </button>
                     </div>
-            
+                </div>
             </div>
 
         </div>
